# pixel_art_gen

./: .gitattributes  .gitignore  .readthedocs.yaml  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
ANTI_PATTERNS/: index.html
ARCHITECTURE/: index.html
STYLE_GUIDE/: index.html
VERIFICATION_PIPELINE/: index.html
api/generator/: index.html
api/palette/: index.html
api/renderer/: index.html
docs/: ANTI_PATTERNS.md  ARCHITECTURE.md  STYLE_GUIDE.md  VERIFICATION_PIPELINE.md  index.md
docs/api/: generator.md  palette.md  renderer.md
scripts/: verify_repo.py
search/: search_index.json
src/pixel_art_gen/: generator.py  palette.py  renderer.py
src/pixel_art_gen/web/: index.html  script.js  style.css
tests/: README.md  test_api.py  test_basic.py  test_generator.py  test_palette.py  test_properties.py  test_renderer.py
